<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical"
    tools:context=".DatosActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Activity2"
        android:textAppearance="@android:style/TextAppearance.Material.WindowTitle" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/nombre"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/txtvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="TextView"
        android:textAppearance="?attr/textAppearanceListItemSecondary" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/apellido"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/txtvApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="TextView"
        android:textAppearance="?attr/textAppearanceListItemSecondary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/email"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="TextView"
        android:textAppearance="?attr/textAppearanceListItemSecondary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/pass"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtvPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="18sp"
        android:paddingBottom="8dp"
        android:text="TextView"
        android:textAppearance="?attr/textAppearanceListItemSecondary"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnAceptar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/btnAceptar" />
</LinearLayout>